hphp/hack/test/typecheck/this_member.php
<?hh // strict
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the BSD-style license found in the
 * LICENSE file in the "hack" directory of this source tree. An additional grant
 * of patent rights can be found in the PATENTS file in the same directory.
 *
 */

class X {
  public function __construct(public this $y) {}

  public function test(X $x): void {
    $x->y = $this->y;
  }
}
